--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Image Search</title>
+
+    <!-- style -->
     <link rel="stylesheet" href="./css/styles.css" />
+
+
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <div class="container">
+    <form class="form">
+      <label>
+        <input class="search-input" type="text" name="search-text" placeholder="Search images..." required>
+      </label>
+      <button class="search-button" type="submit">Search</button>
+    </form>    
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+    <p id="loader-text" class="loader-text hidden">Loading images, please wait...</p>
 
-    <load src="./partials/footer.html" />
+    <ul class="gallery"></ul>
+    </div>
 
     <script type="module" src="./main.js"></script>
+
   </body>
 </html>
