--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <button class="search-button" type="submit">Search</button>
     </form>    
 
-    <p id="loader-text" class="loader-text hidden">Loading images, please wait...</p>
+    <p id="loader" class="loader hidden">Loading images, please wait...</p>
 
     <ul class="gallery"></ul>
     </div>
